--- a/web/styles/Home.module.scss
+++ b/web/styles/Home.module.scss
@@ -15,6 +15,26 @@
   background-color: #101010;
 }
 
+.headerAndDate {
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.dateDisplay {
+  color: #fff;
+  font-family: Montserrat, sans-serif;
+  font-style: italic;
+  font-size: 14px;
+  text-align: center;
+  margin-top: 0; /* Adjust spacing as needed */
+  margin-bottom: 0;
+}
+
+
 .gamesHeader button {
   cursor: pointer;
   font-size: 20px; /* Adjust font size as needed */
@@ -33,11 +53,12 @@
   letter-spacing: -0.015em;
   font-weight: 900;
   font-style: italic;
-  font-size: 2em;
+  font-size: 1.8em;
   text-align: center;
   color: #fff;
   position: relative;
   filter: drop-shadow(0 0 5px #FFF);
+  margin-bottom: 0;
 }
 
 
