Pre-Atomic commit - banner color change, shot and shift charts

--- a/web/components/Layout/Header/Header.module.scss
+++ b/web/components/Layout/Header/Header.module.scss
@@ -7,7 +7,7 @@ $mobile-header-height: 72px;
   justify-content: space-between;
   align-items: center;
   height: $mobile-header-height;
-  background-color: rgba(43, 43, 43, 1);
+  background-color: #101010;
   padding: 1rem;
 
   button {
