--- a/web/components/GameGrid/Switch/Switch.module.css
+++ b/web/components/GameGrid/Switch/Switch.module.css
@@ -1,7 +1,8 @@
 .arrow-up {
   display: block;
   position: absolute;
-  margin-top: 5px;
+  margin-top: 8px;
+  margin-left: 20px;
   width: 0;
   height: 0;
   border-left: 8px solid transparent;
@@ -12,7 +13,8 @@
 .arrow-down {
   display: block;
   position: absolute;
-  margin-top: 5px;
+  margin-top: 8px;
+  margin-left: 20px;
   width: 0;
   height: 0;
   border-left: 8px solid transparent;
